--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
     steps:
       - *checkout_code
       - *attach_workspace
-      - run: chromatic --project-token=uktab5dt17b --exit-zero-on-changes
+      - run: yarn chromatic
 
   publish_dev_npm:
     <<: *job_defaults
