--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdk",
-  "version": "4.1.3",
+  "version": "4.1.4",
   "description": "React Component Developer Kit",
   "scripts": {
     "start": "start-storybook",
@@ -35,7 +35,7 @@
   "homepage": "https://github.com/reaviz/rdk#readme",
   "dependencies": {
     "classnames": "^2.2.6",
-    "framer-motion": "^2.1.0",
+    "framer-motion": "^2.7.7",
     "popper.js": "^1.16.1",
     "react-scrolllock": "^5.0.1"
   },
@@ -49,47 +49,47 @@
     "commitMessage": "deploy storybook [ci skip]"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@babel/runtime": "^7.10.5",
-    "@mdx-js/react": "^1.5.8",
-    "@storybook/addon-centered": "^5.3.19",
-    "@storybook/addon-docs": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
-    "@storybook/source-loader": "^5.3.19",
+    "@babel/runtime": "^7.11.2",
+    "@mdx-js/react": "1.6.18",
+    "@storybook/addon-docs": "6.0.26",
+    "@storybook/addon-knobs": "6.0.26",
+    "@storybook/addons": "6.0.26",
+    "@storybook/preset-scss": "^1.0.2",
+    "@storybook/react": "6.0.26",
     "@storybook/storybook-deployer": "^2.8.6",
     "@types/classnames": "^2.2.10",
-    "@types/react": "^16.9.43",
+    "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "autoprefixer": "^9.8.5",
     "babel-loader": "^8.1.0",
-    "chromatic": "^5.0.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
+    "chromatic": "^5.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
     "node-sass": "^4.14.1",
     "postcss-focus-visible": "^5.0.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
-    "rollup": "^2.22.1",
+    "rollup": "^2.28.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.3",
-    "rollup-plugin-postcss": "^3.1.3",
-    "rollup-plugin-postcss-modules": "^2.0.1",
+    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-postcss-modules": "^2.0.2",
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-typescript2": "0.26.0",
-    "sass-loader": "^9.0.2",
+    "sass-loader": "^10.0.2",
     "semver": "^7.3.2",
     "ts-loader": "^8.0.1",
     "typescript": "^3.9.7"
