--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdk",
-  "version": "4.2.0",
+  "version": "4.2.1",
   "description": "React Component Developer Kit",
   "scripts": {
     "start": "start-storybook",
@@ -15,7 +15,7 @@
   "module": "dist/index.esm.js",
   "browser": "dist/index.js",
   "style": "dist/index.css",
-  "typings": "dist/src/index.d.ts",
+  "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reaviz/rdk.git"
