--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/classnames": "^2.2.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "framer-motion": "^3.0.0",
     "autoprefixer": "^9.8.5",
     "chromatic": "^5.2.0",
     "husky": "^4.3.0",
