--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rdk",
-  "version": "5.0.6",
+  "version": "5.1.0",
   "description": "React Component Developer Kit",
   "scripts": {
     "start": "start-storybook",
@@ -37,9 +37,9 @@
     "react-scrolllock": "^5.0.1"
   },
   "peerDependencies": {
+    "framer-motion": "^3.0.0",
     "react": ">=16",
-    "react-dom": ">=16",
-    "framer-motion": "^3.0.0"
+    "react-dom": ">=16"
   },
   "storybook-deployer": {
     "gitUsername": "amcdnl",
@@ -48,24 +48,24 @@
   },
   "devDependencies": {
     "@mdx-js/react": "1.6.22",
-    "@storybook/addon-docs": "6.1.11",
-    "@storybook/addon-knobs": "6.1.11",
-    "@storybook/addons": "6.1.11",
-    "@storybook/react": "6.1.11",
+    "@storybook/addon-docs": "6.2.8",
+    "@storybook/addon-knobs": "6.2.8",
+    "@storybook/addons": "6.2.8",
+    "@storybook/react": "6.2.8",
     "@storybook/storybook-deployer": "^2.8.7",
     "@types/classnames": "^2.2.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "framer-motion": "^3.0.0",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "autoprefixer": "^9.8.5",
-    "chromatic": "^5.2.0",
+    "chromatic": "^5.6.2",
+    "framer-motion": "^4.1.4",
     "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
+    "lint-staged": "^10.5.4",
     "postcss-focus-visible": "^5.0.0",
     "prettier": "^2.1.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-docgen-typescript-loader": "^3.7.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "rollup": "^2.28.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -74,7 +74,7 @@
     "rollup-plugin-postcss-modules": "^2.0.2",
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-typescript2": "0.26.0",
-    "storybook-css-modules-preset": "^1.0.5",
+    "storybook-css-modules-preset": "^1.0.8",
     "typescript": "^4.1.3"
   },
   "lint-staged": {
