--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "6.4.4",
   "description": "React Component Developer Kit",
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 9009",
+    "build": "vite build --mode library",
+    "chromatic": "chromatic --project-token=uktab5dt17b --exit-zero-on-changes",
     "build-storybook": "export NODE_OPTIONS=--openssl-legacy-provider && build-storybook",
-    "storybook:ci": "storybook-to-ghpages --existing-output-dir=storybook-static --ci",
     "prettier": "prettier --loglevel warn --write 'src/**/*.{ts,tsx,js,jsx}'",
-    "build": "rollup -c",
-    "chromatic": "chromatic --project-token=uktab5dt17b --exit-zero-on-changes"
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 9009",
+    "storybook:ci": "storybook-to-ghpages --existing-output-dir=storybook-static --ci",
+    "test": "vitest --passWithNoTests",
+    "test:coverage": "vitest run --coverage --passWithNoTests"
+  },
+  "type": "module",
+  "types": "dist/index.d.ts",
+  "main": "./dist/rdk.umd.cjs",
+  "module": "./dist/rdk.js",
+  "exports": {
+    ".": {
+      "import": "./dist/rdk.js",
+      "require": "./dist/rdk.umd.cjs"
+    }
   },
   "source": "src/index.ts",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
   "browser": "dist/index.js",
   "style": "dist/index.css",
   "typings": "dist/index.d.ts",
@@ -55,26 +65,28 @@
     "@types/classnames": "^2.3.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/coverage-c8": "^0.31.1",
     "autoprefixer": "^9.8.5",
     "chromatic": "^6.17.3",
-    "framer-motion": "^6.2.8",
     "husky": "^4.3.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^10.5.4",
     "postcss-focus-visible": "^5.0.0",
     "prettier": "^2.1.2",
     "react": "^18.2.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^18.2.0",
-    "rollup": "^2.28.2",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.3",
-    "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-postcss-modules": "^2.0.2",
-    "rollup-plugin-sourcemaps": "^0.6.2",
-    "rollup-plugin-typescript2": "0.26.0",
     "storybook-css-modules-preset": "^1.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.9.5",
+    "vite": "^4.3.9",
+    "vite-plugin-checker": "^0.6.0",
+    "vite-plugin-css-injected-by-js": "^3.1.1",
+    "vite-plugin-dts": "^2.3.0",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.31.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
