--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "build": "vite build --mode library",
     "chromatic": "chromatic --project-token=uktab5dt17b --exit-zero-on-changes",
-    "build-storybook": "export NODE_OPTIONS=--openssl-legacy-provider && build-storybook",
+    "build-storybook": "storybook build",
     "prettier": "prettier --loglevel warn --write 'src/**/*.{ts,tsx,js,jsx}'",
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 9009",
+    "start": "storybook dev -p 9009",
     "storybook:ci": "storybook-to-ghpages --existing-output-dir=storybook-static --ci",
     "test": "vitest --passWithNoTests",
     "test:coverage": "vitest run --coverage --passWithNoTests"
@@ -57,11 +57,14 @@
     "commitMessage": "deploy storybook [ci skip]"
   },
   "devDependencies": {
-    "@mdx-js/react": "1.6.22",
-    "@storybook/addon-docs": "6.4.20",
-    "@storybook/addons": "6.4.20",
-    "@storybook/react": "6.4.20",
-    "@storybook/storybook-deployer": "^2.8.11",
+    "@storybook/addon-docs": "^7.0.18",
+    "@storybook/addon-essentials": "7.0.18",
+    "@storybook/addon-mdx-gfm": "7.0.18",
+    "@storybook/addon-storysource": "^7.0.18",
+    "@storybook/addons": "7.0.18",
+    "@storybook/react": "7.0.18",
+    "@storybook/react-vite": "^7.0.18",
+    "@storybook/theming": "7.0.18",
     "@types/classnames": "^2.3.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
@@ -78,6 +81,7 @@
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^18.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.3",
+    "storybook": "7.0.18",
     "storybook-css-modules-preset": "^1.1.1",
     "typescript": "^4.9.5",
     "vite": "^4.3.9",
