--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
-    "framer-motion": "7.8.0",
+    "framer-motion": "^10.16.16",
     "popper.js": "^1.16.1"
   },
   "peerDependencies": {
