--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "homepage": "https://github.com/reaviz/rdk#readme",
   "dependencies": {
-    "body-scroll-lock": "^4.0.0-beta.0",
+    "body-scroll-lock-upgrade": "^1.1.0",
     "classnames": "^2.3.2",
     "framer-motion": "^11.0.6",
     "popper.js": "^1.16.1"
